added cloudinary cdn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="box">
         <div class="half"></div>
         <div class="content">
-            <img src="@Tensoflow (8).jpg" alt="Purity">
+            <img src="https://res.cloudinary.com/whizz/image/upload/c_scale,dpr_auto,f_auto,w_300,x_1400,y_126/v1591554196/Pure/Tensoflow_8_u9pdkr.jpg" alt="Purity">
             <h3>Purity Nyakundi</h3>
             <h5>Data Scientist</h5>
             <span>
@@ -21,5 +21,8 @@
             </span>
         </div>
     </div>
+    <script>
+        cloudinary.imageTag('Pure/Tensoflow_8_u9pdkr.jpg', {dpr: "auto", width: 300, x: 1400, y: 126, crop: "scale", fetchFormat: "auto"}).toHtml();
+    </script>
 </body>
 </html>
