--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </span>
         </div>
     </div>
-    <a href="trial.html" target="_blank" rel="noopener noreferrer">Click to see J.D's card</a>
+    <a href="trial.html" rel="noopener noreferrer">Click to see J.D's card</a>
 
     <script>
         cloudinary.imageTag('Pure/Tensoflow_8_u9pdkr.jpg', {dpr: "auto", width: 300, x: 1400, y: 126, crop: "scale", fetchFormat: "auto"}).toHtml();
