--- a/trial.html
+++ b/trial.html
@@ -18,7 +18,7 @@
         </div>
         <div class="glass"></div>
     </div>
-    <a href="index.html" target="_blank" rel="noopener noreferrer">Click to see Pure's card</a>
+    <a href="index.html" rel="noopener noreferrer">Click to see Pure's card</a>
 
 </body>
 </html>
